Adding whatever else I touched today

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1366,11 +1366,13 @@ hr.title {
 }
 
 /* Main Navigation */
+nav {
+  margin: 20px 0 40px 0;
+}
 
 #nav {
   width:100%;
   list-style-type:none;
-  margin: 0;
   padding: 0;
   position:relative;
   z-index:9999;
@@ -1580,6 +1582,16 @@ hr.title {
 }
 .index #footer {
   display: none;
+}
+
+#footer a {
+  font-weight: bold;
+}
+
+#footer a:hover {
+  -webkit-animation: text-cycler 0.5s infinite;
+  -moz-animation: text-cycler 0.5s infinite;
+  animation: text-cycler 0.5s infinite;
 }
 
 #footer-modules {
@@ -2931,6 +2943,16 @@ h1.page-title {
   margin: 0 auto;
   padding-bottom:40px;
   position: relative;
+}
+
+#product-content a {
+  font-weight: bold;
+}
+
+#product-content a:hover {
+  -webkit-animation: text-cycler 0.5s infinite;
+  -moz-animation: text-cycler 0.5s infinite;
+  animation: text-cycler 0.5s infinite;
 }
 
 #product-details {
