--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -29,7 +29,7 @@
       
     <div class="exp-text-block">
       <h2>ARTISTS</h2>
-      <p>We work with our artists directly to do test prints at print resolution, and most of our profits go straight back to the artists. If you're an artist and want to get in touch, say hi at <a href="mailto:artists@gifpop.io"><b>artists@gifpop.io</b></a>!</p>
+      <p>We work with our artists directly to do test prints at print resolution, and most of our profits go straight back to the artists. If you're an artist and want to get in touch, say hi at <a href="mailto:artists@gifpop.io">artists@gifpop.io</a>!</p>
     </div>
   </div>
 
