updating product page copy, logo that's not transparent

--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -14,22 +14,12 @@
   {% if product.available %}
   <div id="exp-text">
     <div class="exp-text-block">
-      <h2>WHAT MAKES A GOOD GIFPOP?</h2>
-      <p>Lenticular printing is an awesome process, and we're pushing it to the limit by printing many frames on a single card. That said, not all gifs were created equally, and some animations will work better than others.</p>
-      </div>
-
-    <div class="exp-text-block">
       <h2>FRAMES / GHOSTING</h2>
-      <p>We're currently printing up to ten frames on a single card. Because there is always a little ghosting on lenticular cards as you go up to high frame counts, we're currently limiting the Gifpop creation process to ten sequential frames. Gifs that are very blurry or have lots of sudden camera movements will be less clear than ones with smooth, clear motion.</p>
+      <p>We're currently printing up to ten frames on a single card. Gifs that are very blurry or have lots of sudden camera movements will be less clear than ones with smooth, clear motion.</p>
     </div>
     <div class="exp-text-block">
-      <h2>RESOLUTION</h2>
-      <p>We know gifs aren't always the highest resolution, and so are printing small cards to start with. If you'd like to print at a high resolution, feel free to use our two image flip uploader to send us hi-res assets!</p>
-      </div>
-      
-    <div class="exp-text-block">
       <h2>ARTISTS</h2>
-      <p>We work with our artists directly to do test prints at print resolution, and most of our profits go straight back to the artists. If you're an artist and want to get in touch, say hi at <a href="mailto:artists@gifpop.io">artists@gifpop.io</a>!</p>
+      <p>We love working with artists. If you want to show off your work, send it to us on <a href="http://blog.gifpop.io/submit" target="_blank">our tumblr</a>! If you have a project idea or want to work with us on a special project, say hi at <a href="mailto:artists@gifpop.io">artists@gifpop.io</a>!</p>
     </div>
   </div>
 
