updating nav, adding black bg, uppercasing index headers

--- a/assets/chris.css.liquid
+++ b/assets/chris.css.liquid
@@ -271,6 +271,9 @@ h5 {
   margin: 0.33em 10%;
   width: 80%;
   color: #fff;
+  font-family: "futura-pt", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-transform: uppercase;
+  font-style: italic;
 }
 @media (min-width: 768px) {
   .home-container .content .wrap h2 {
@@ -279,7 +282,6 @@ h5 {
   }
 }
 .home-container .content .wrap p {
-  font-family: "futura-pt", "Futura", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
   font-size: 1em;
 }
