--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -158,6 +158,7 @@ a {
   min-height:500px;
   position:relative;
   padding:0 40px;
+  background: rgba(0,0,0,.5);
  /* {% if settings.page_bg_transparent %}
     background:transparent;
   {% else %}
@@ -2453,7 +2454,7 @@ a.slide-link {
   margin: 0;
 }
 .index-section b {
-  color: #000;
+  color: #FFF;
   margin: 10px 0 0;
 }
 .gif-image {
