--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -12,9 +12,10 @@
             <div id="logo"></div>
             <ul id="nav-items">
                 <li><a href="/products/gifchop">Make Your Own</a></li>
+                <li><a href="/pages/how-it-works">How it Works</a></li>
                 <li><a href="/collections/artists">Art Prints</a></li>
-                <li><a href="/about-us">About Gifpop</a></li>
-                <li><a href="http://blog.gifpop.io">Gifpop Blog</a></li>
+                <li><a href="/about-us">About</a></li>
+                <li><a href="http://blog.gifpop.io">Blog</a></li>
             </ul>
         </navivation>
 
