copy changes on the index

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -31,7 +31,7 @@
                     <div class="content vertical-center">
                         <div class="wrap">
                             <h2>Turn your GIFs into IRL prints</h2>
-                            <p>Through the magic of lenticular printing, Gifpop can turn all of your wildest GIFs in to real printed animated pieces.</p>
+                            <p>Gifs aren't just for screens anymore. Gifpop brings animated gifs to life with the magic of lenticular printing.</p>
                             <div class="cta">
                                 <a class="link-button scroll-button skew" href="#home-browse"><img src="{{ 'down-arrow.svg' | asset_url }}" width="25px" height="25px" /></a>
                             </div>
@@ -48,7 +48,7 @@
                      <div class="content vertical-center">
                         <div class="wrap">
                             <h2>Use your favorite GIF</h2>
-                            <p>GIFs are everywhere, you may have made some of your own. No matter the GIF we can Gifpop it for you.</p>
+                            <p>From your own animated gifs to even vine and instagram videos, we can print it all.</p>
                             <div class="cta">
                                 <a class="link-button scroll-button skew" href="/products/gifchop">Make One</a>
                             </div>
@@ -65,7 +65,7 @@
                      <div class="content vertical-center">
                         <div class="wrap">
                             <h2>Time for Magic</h2>
-                            <p>We take your GIFs and do some magic to turn them into 10 frame lenticular prints that come to life when you move them</p>
+                            <p>Custom lenticular printing magic turns gifs into cards that come to life when you move them.</p>
                             <div class="cta">
                                 <a class="link-button scroll-button skew" href="/how-it-works">How it Works</a>
                             </div>
