new artist credit

--- a/assets/chris.css.liquid
+++ b/assets/chris.css.liquid
@@ -298,6 +298,22 @@ h5 {
   position: relative;
 }
 
+.home-container .credit {
+  position: absolute;
+  z-index: 1;
+  background: rgba(0,0,0,.5);
+  bottom: 0px;
+  color: #808080;
+  padding: 5px 10px;
+}
+.home-container .credit .upp {
+  text-transform: uppercase;
+  font-style: italic;
+}
+.home-container .credit:hover {
+  color: white;
+}
+
 .bg-vignette {
   width: 100%;
   height: 100%;
