--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -14,7 +14,7 @@
                 <li><a href="/products/gifchop">Make Your Own</a></li>
                 <li><a href="/pages/how-it-works">How it Works</a></li>
                 <li><a href="/collections/artists">Art Prints</a></li>
-                <li><a href="/about-us">About</a></li>
+                <li><a href="/pages/about-us">About</a></li>
                 <li><a href="http://blog.gifpop.io">Blog</a></li>
             </ul>
         </navivation>
@@ -37,6 +37,10 @@
                             </div>
                         </div>
                     </div>
+                    <a class="credit" href="/products/patakk-nine">
+                      <p>GIF by Patakk</p>
+                      <div class="upp">View this print</div>
+                    </a>
                 </div>
 
 
@@ -101,9 +105,9 @@
 
                             <div class="artist-gifs footer-summary">
                                 <h3>Check out our Artists Prints</h3>
-                                    <img src="" data-echo="{{ '89a.gif' | asset_url }}" width="250px" height="250px" />
-                                    <img src="" data-echo="{{ 'remastered.gif' | asset_url }}" width="250px" height="250px" />
-                                    <img src="" data-echo="{{ 'pixelfucks.gif' | asset_url }}" width="250px" height="250px" />
+                                    <a href="/products/bees-and-bombs"><img src="" data-echo="{{ 'beesandbombs.gif' | asset_url }}" width="250px" height="250px" /></a>
+                                    <a href="/products/cindy-suen"><img src="" data-echo="{{ 'cindy_suen.gif' | asset_url }}" width="250px" height="250px" /></a>
+                                    <a href="/products/gnumblr"><img src="" data-echo="{{ 'gnumblr.gif' | asset_url }}" width="250px" height="250px" /></a>
                                 <div class="cta">
                                     <a class="link-button skew" href="/collections/artists">See More</a>
                                 </div>
@@ -138,6 +142,10 @@
                             </div>
                         </div>
                     </div>
+                    <a class="credit" href="/products/dvdp-140405">
+                      <p>GIF by Davidope</p>
+                      <div class="upp">View this print</div>
+                    </a>
                 </div>
 
         </div>
