--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -31,7 +31,7 @@
                     <div class="content vertical-center">
                         <div class="wrap">
                             <h2>Turn your GIFs into IRL prints</h2>
-                            <p>Gifs aren't just for screens anymore. Gifpop brings animated gifs to life with the magic of lenticular printing.</p>
+                            <p>Gifs aren't just for screens anymore.<br />Gifpop brings animated gifs to life with the magic of lenticular printing.</p>
                             <div class="cta">
                                 <a class="link-button scroll-button skew" href="#home-browse"><img src="{{ 'down-arrow.svg' | asset_url }}" width="25px" height="25px" /></a>
                             </div>
@@ -51,8 +51,8 @@
                     <div class="bg-vignette bg-vignette-dark"></div>
                      <div class="content vertical-center">
                         <div class="wrap">
-                            <h2>Use your favorite GIF</h2>
-                            <p>From your own animated gifs to even vine and instagram videos, we can print it all.</p>
+                            <h2>Use your favorite GIFs</h2>
+                            <p>From your own animated gifs to even Vine and Instagram videos, we can print it all.</p>
                             <div class="cta">
                                 <a class="link-button scroll-button skew" href="/products/gifchop">Make One</a>
                             </div>
@@ -61,23 +61,6 @@
 
                 </div>
 
-                <div id="home-giffy" class="home-container resize-height" data-height="100">
-                    <div class="sprite-bg" data-frames="7" data-speed="2">
-                        <img src="" data-echo="{{ '04-gifpop.png' | asset_url }}" />
-                    </div>
-                    <div class="bg-vignette bg-vignette-dark"></div>
-                     <div class="content vertical-center">
-                        <div class="wrap">
-                            <h2>Time for Magic</h2>
-                            <p>Custom lenticular printing magic turns gifs into cards that come to life when you move them.</p>
-                            <div class="cta">
-                                <a class="link-button scroll-button skew" href="/how-it-works">How it Works</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
                 <div id="home-example" class="home-container resize-height" data-height="100">
                     <div class="sprite-bg" data-frames="16" data-speed="2">
                         <img src="" data-echo="{{ '03-example.jpg' | asset_url }}" />
@@ -85,68 +68,93 @@
                     <div class="bg-vignette bg-vignette-dark"></div>
                      <div class="content vertical-center">
                         <div class="wrap">
-                            <h2>Here's what you get</h2>
-                            <p>A beautiful print that captures the movement of your GIF, in your hands. Also check out our limited artists prints.</p>
+                            <h2>Hold GIFs in your hands</h2>
+                            <p>Custom lenticular printing turns those gifs into cards that come to life when you move them.</p>
                             <div class="cta">
-                                <a class="link-button scroll-button skew" href="/collections/artists">Artists Prints</a>
+                                <a class="link-button scroll-button skew" href="/how-it-works">How it works</a>
                             </div>
                         </div>
                     </div>
 
+                </div>
+
+
+                <div id="home-footer" class="home-container resize-height" data-height="100">
+                  <div class="sprite-bg" data-frames="10" data-speed="8">
+                    <img src="" data-echo="{{ '05-footer.png' | asset_url }}" />
+                  </div>
+                  <div class="bg-vignette bg-vignette-very-dark"></div>
+                  <div class="content">
+                    <div class="wrap">
+                      <div class="artist-gifs footer-summary">
+                        <h2>GIFs out in the wild</h2>
+                        <p>People are making amazing and hilarious things with Gifpop. Here are some of our favorites.</p>
+
+                        <a href="/products/bees-and-bombs"><img src="" data-echo="{{ 'beesandbombs.gif' | asset_url }}" width="250px" height="250px" /></a>
+                        <a href="/products/cindy-suen"><img src="" data-echo="{{ 'cindy_suen.gif' | asset_url }}" width="250px" height="250px" /></a>
+                        <a href="/products/gnumblr"><img src="" data-echo="{{ 'gnumblr.gif' | asset_url }}" width="250px" height="250px" /></a>
+
+                        <div class="cta">
+                            <a class="link-button skew" href="/collections/artists">See More</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
 
                 <div id="home-footer" class="home-container resize-height" data-height="100">
-                    <div class="sprite-bg" data-frames="10" data-speed="8">
-                        <img src="" data-echo="{{ '05-footer.png' | asset_url }}" />
-                    </div>
-                    <div class="bg-vignette bg-vignette-very-dark"></div>
-                     <div class="content">
-                        <div class="wrap">
+                  <div class="sprite-bg" data-frames="10" data-speed="8">
+                    <img src="" data-echo="{{ '05-footer.png' | asset_url }}" />
+                  </div>
+                  <div class="bg-vignette bg-vignette-very-dark"></div>
+                   <div class="content">
+                      <div class="wrap">
 
-                            <div class="artist-gifs footer-summary">
-                                <h3>Check out our Artists Prints</h3>
-                                    <a href="/products/bees-and-bombs"><img src="" data-echo="{{ 'beesandbombs.gif' | asset_url }}" width="250px" height="250px" /></a>
-                                    <a href="/products/cindy-suen"><img src="" data-echo="{{ 'cindy_suen.gif' | asset_url }}" width="250px" height="250px" /></a>
-                                    <a href="/products/gnumblr"><img src="" data-echo="{{ 'gnumblr.gif' | asset_url }}" width="250px" height="250px" /></a>
-                                <div class="cta">
-                                    <a class="link-button skew" href="/collections/artists">See More</a>
-                                </div>
-                            </div>
+                          <div class="artist-gifs footer-summary">
+                              <h2>Support GIF artists</h2>
+                              <p>We work with the most bitflippin' artists on the Internet to print limited editions of their work.</p>
+                              <a href="/products/bees-and-bombs"><img src="" data-echo="{{ 'beesandbombs.gif' | asset_url }}" width="250px" height="250px" /></a>
+                              <a href="/products/cindy-suen"><img src="" data-echo="{{ 'cindy_suen.gif' | asset_url }}" width="250px" height="250px" /></a>
+                              <a href="/products/gnumblr"><img src="" data-echo="{{ 'gnumblr.gif' | asset_url }}" width="250px" height="250px" /></a>
+                              <div class="cta">
+                                  <a class="link-button skew" href="/collections/artists">See More Art Prints</a>
+                              </div>
+                          </div>
 
-                            <div class="footer-summary">
-                                <h3>Gifpops are super easy to make</h3>
-                                <ul class="make-options">
-                                    <li>
-                                        <img src="" data-echo="{{ 'drag-drop.png' | asset_url }}" width="250px" height="200px" />
-                                        <h4>Drag &amp; Drop</h4>
-                                        <h5>your GIF file here</h5>
-                                    </li>
-                                    <li>
-                                        <img src="" data-echo="{{ 'upload.png' | asset_url }}" width="250px" height="200px" />
-                                        <h4>Upload</h4>
-                                        <h5>a GIF file</h5>
-                                    </li>
-                                    <li>
-                                        <img src="" data-echo="{{ 'flip-flop.png' | asset_url }}" width="250px" height="200px" />
-                                        <h4>Flip-Flop</h4>
-                                        <h5>Between two images</h5>
-                                    </li>
-                                </ul>
+                          <div class="footer-summary">
+                              <h2>GET YOUR GIF ON!</h2>
+                              <ul class="make-options">
+                                  <li>
+                                      <img src="" data-echo="{{ 'drag-drop.png' | asset_url }}" width="250px" height="200px" />
+                                      <h4>Drag &amp; Drop</h4>
+                                      <h5>your GIF file here</h5>
+                                  </li>
+                                  <li>
+                                      <img src="" data-echo="{{ 'upload.png' | asset_url }}" width="250px" height="200px" />
+                                      <h4>Upload</h4>
+                                      <h5>a GIF file</h5>
+                                  </li>
+                                  <li>
+                                      <img src="" data-echo="{{ 'flip-flop.png' | asset_url }}" width="250px" height="200px" />
+                                      <h4>Flip-Flop</h4>
+                                      <h5>Between two images</h5>
+                                  </li>
+                              </ul>
 
-                                <div class="url-method">
-                                    <input type="text" placeholder="http://imgur.com/awesome.gif" />
-                                    <h4>Enter a URL</h4>
-                                    <h5>Vine and Instagram Videos work too!</h5>
-                                </div>
+                              <div class="url-method">
+                                  <input type="text" placeholder="http://imgur.com/awesome.gif" />
+                                  <h4>Enter a URL</h4>
+                                  <h5>Vine and Instagram Videos work too!</h5>
+                              </div>
 
-                            </div>
-                        </div>
-                    </div>
-                    <a class="credit" href="/products/dvdp-140405">
-                      <p>GIF by Davidope</p>
-                      <div class="upp">View this print</div>
-                    </a>
-                </div>
+                          </div>
+                      </div>
+                  </div>
+                  <a class="credit" href="/products/dvdp-140405">
+                    <p>GIF by Davidope</p>
+                    <div class="upp">View this print</div>
+                  </a>
+              </div>
 
         </div>
 
