updating image names, putting metagifs on index

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -137,7 +137,7 @@ a {
   left: 0;
   z-index: 1;
 
-  background-image: url({{ 'remastered.gif' | asset_url }});
+  background-image: url({{ 'preview-artists-zwian.gif' | asset_url }});
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
