--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -79,7 +79,7 @@
                 </div>
 
 
-                <div id="home-footer" class="home-container resize-height" data-height="100">
+                <div id="home-footer" class="home-container resize-height" data-height="40">
                   <div class="sprite-bg" data-frames="10" data-speed="8">
                     <img src="" data-echo="{{ '05-footer.png' | asset_url }}" />
                   </div>
@@ -88,15 +88,12 @@
                     <div class="wrap">
                       <div class="artist-gifs footer-summary">
                         <h2>GIFs out in the wild</h2>
-                        <p>People are making amazing and hilarious things with Gifpop. Here are some of our favorites.</p>
+                        <p>People are making amazing things with Gifpop. Here are some of our favorites.</p>
 
-                        <a href="/products/bees-and-bombs"><img src="" data-echo="{{ 'beesandbombs.gif' | asset_url }}" width="250px" height="250px" /></a>
-                        <a href="/products/cindy-suen"><img src="" data-echo="{{ 'cindy_suen.gif' | asset_url }}" width="250px" height="250px" /></a>
-                        <a href="/products/gnumblr"><img src="" data-echo="{{ 'gnumblr.gif' | asset_url }}" width="250px" height="250px" /></a>
+                        <a href="http://blog.gifpop.io/post/70435876361/wells-riley-is-too-cool-deal-with-it"><img src="" data-echo="{{ 'preview-metagif-wellsriley.gif' | asset_url }}" width="250px" height="250px" /></a>
+                        <a href="http://blog.gifpop.io/post/79402473598/stallio-some-scrambled-tv-lenticular-style"><img src="" data-echo="{{ 'preview-metagif-stallio.gif' | asset_url }}" width="250px" height="250px" /></a>
+                        <a href="http://blog.gifpop.io/post/70299015811/traceloops-gifpop-prints-arrived-in-the-mail"><img src="" data-echo="{{ 'preview-metagifs-traceloops.gif' | asset_url }}" width="250px" height="250px" /></a>
 
-                        <div class="cta">
-                            <a class="link-button skew" href="/collections/artists">See More</a>
-                        </div>
                       </div>
                     </div>
                   </div>
@@ -113,9 +110,9 @@
                           <div class="artist-gifs footer-summary">
                               <h2>Support GIF artists</h2>
                               <p>We work with the most bitflippin' artists on the Internet to print limited editions of their work.</p>
-                              <a href="/products/bees-and-bombs"><img src="" data-echo="{{ 'beesandbombs.gif' | asset_url }}" width="250px" height="250px" /></a>
-                              <a href="/products/cindy-suen"><img src="" data-echo="{{ 'cindy_suen.gif' | asset_url }}" width="250px" height="250px" /></a>
-                              <a href="/products/gnumblr"><img src="" data-echo="{{ 'gnumblr.gif' | asset_url }}" width="250px" height="250px" /></a>
+                              <a href="/products/bees-and-bombs"><img src="" data-echo="{{ 'preview-artists-beesandbombs.gif' | asset_url }}" width="250px" height="250px" /></a>
+                              <a href="/products/cindy-suen"><img src="" data-echo="{{ 'preview-artists-cindy.gif' | asset_url }}" width="250px" height="250px" /></a>
+                              <a href="/products/gnumblr"><img src="" data-echo="{{ 'preview-artists-gnumblr.gif' | asset_url }}" width="250px" height="250px" /></a>
                               <div class="cta">
                                   <a class="link-button skew" href="/collections/artists">See More Art Prints</a>
                               </div>
