removing old index html, cleaning up bottom links

--- a/assets/chris.css.liquid
+++ b/assets/chris.css.liquid
@@ -553,31 +553,31 @@ h5 {
     margin-bottom: 140px;
   }
 }
-#home-footer .footer-summary {
+.footer-summary {
   margin: 60px 0 0 0;
 }
 @media (min-width: 768px) {
-  #home-footer .footer-summary {
+  .footer-summary {
     margin: 100px 0 0 0;
   }
 }
 @media (min-width: 1030px) {
-  #home-footer .footer-summary {
+  .footer-summary {
     margin: 140px 0 0 0;
   }
 }
-#home-footer .footer-summary img {
+.footer-summary img {
   margin: 0.5em;
   width: 250px;
 }
 @media (min-width: 768px) {
-  #home-footer .footer-summary img {
+  .footer-summary img {
     margin: 10px 15px;
     width: 200px;
   }
 }
 @media (min-width: 1030px) {
-  #home-footer .footer-summary img {
+  .footer-summary img {
     width: 250px;
     margin: 20px 35px;
   }
