--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -3011,6 +3011,7 @@ h1.page-title {
   margin:0 0 10px 0;
   line-height:40px;
   font-family:{{ settings.headings_font }};
+  font-weight: 500;
   text-transform: uppercase;
 }
 
