--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -123,17 +123,23 @@
                               <ul class="make-options">
                                   <li>
                                       <img src="" data-echo="{{ 'upload.png' | asset_url }}" width="250px" height="200px" />
-                                      <h4>Gif Chop</h4>
+                                      <div class="cta">
+                                        <a class="link-button skew" href="/products/gifchop">Gif Chop</a>
+                                      </div>
                                       <h5>Gifs, Vines, Instagrams</h5>
                                   </li>
                                   <li>
                                       <img src="" data-echo="{{ 'flip-flop.png' | asset_url }}" width="250px" height="200px" />
-                                      <h4>Flip-Flop</h4>
+                                      <div class="cta">
+                                        <a class="link-button skew" href="/products/gifchop">Flip Flop</a>
+                                      </div>
                                       <h5>Fade between two images</h5>
                                   </li>
                                   <li>
                                       <img src="" data-echo="{{ 'flip-flop.png' | asset_url }}" width="250px" height="200px" />
-                                      <h4>Artist Prints</h4>
+                                      <div class="cta">
+                                        <a class="link-button skew" href="/collections/artists">Featured Artists</a>
+                                      </div>
                                       <h5>View the featured artists gallery</h5>
                                   </li>
                               </ul>
