--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1343,26 +1343,24 @@ p.highlight {
   color:white;
 }
 
-hr.title {
-  margin: 0 0 -20px 0;
-  border-top: 1px solid #fff;
+/* Give the gift of gif */
+.header-rule-container {
   clear: both;
+  width: 100%;
 }
-
+hr.inline-rule {
+  display: inline-block;
+  border-top: 1px solid #fff;
+  width: 335px;
+}
 .header-text {
   text-transform: uppercase;
   font-size: 18px;
-  margin: 20px auto;
-  text-align: center;
-  display: block;
-}
+  display: inline-block;
 
-.title-text {
-  padding: 7px 15px;
+  padding: 8px;
   color: #fff;
-  background-color: #222;
-  display: block;
-  width: 191px;
+  width: 190px;
   margin: 0 auto 20px;
 }
 
